<resources>
    <string name="app_name" translatable="false">Abfall LRO</string>
    <string name="author" translatable="false">Felix Beuster</string>
    <string name="version" translatable="false">1.8.3</string>
    <string name="dialog_button_positive">OK</string>
    <string name="dialog_button_negative">Abbrechen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="location_select_button">Festlegen</string>
    <string name="intro_button_done">Fertig</string>
    <string name="intro_button_next">Weiter</string>
    <string name="intro_button_skip">Überspringen</string>
    <string name="intro_title">%1$s - %2$s</string>
    <string name="intro_title_guide">Anleitung</string>
    <string name="intro_title_setup">Einrichtung</string>
    <string name="intro_guide_main_desc">Der große Eimer zeigt dir, welche Tonne heute an der Reihe ist.</string>
    <string name="intro_guide_main_title">Hauptansicht</string>
    <string name="intro_guide_preview_desc">Die kleinen Eimer unten zeigen dir, in wie vielen Tagen die jeweilige Tonne abgeholt wird.</string>
    <string name="intro_guide_preview_title">Vorschau</string>
    <string name="intro_guide_settings_desc">Alles fertig eingerichtet. Einstellungen kannst du jederzeit in diesem Menü ändern.</string>
    <string name="intro_guide_settings_title">Fertig</string>
    <string name="intro_setup_location_desc">Wo werden die Tonnen abgeholt? Für Güstrow ist auch die Straße wichtig.</string>
    <string name="intro_setup_location_label_street">Wähle eine Straße aus (nur Güstrow)</string>
    <string name="intro_setup_location_label_town">Wähle einen Ort aus</string>
    <string name="intro_setup_location_title">Abholort</string>
    <string name="intro_setup_schedule_desc">In welchem Rhythmus werden die Tonnen abgeholt?</string>
    <string name="intro_setup_schedule_title">Abholrhythmus</string>
    <string name="intro_setup_schedule_monthly_black">graue Tonne ist monatlich</string>
    <string name="intro_setup_schedule_monthly_green">grüne Tonne ist monatlich</string>
    <string name="check_can_black">graue</string>
    <string name="check_can_blue">blaue</string>
    <string name="check_can_green">grüne</string>
    <string name="check_can_none">Heute keine Abholung.</string>
    <plurals name="check_can_sentence">
        <item quantity="one">Heute wird die %s Tonne abgeholt.</item>
        <item quantity="other">Heute werden die %s Tonne abgeholt.</item>
    </plurals>
    <string name="check_can_yellow">gelbe</string>
    <string name="check_invalid_city">Keine Stadt ausgewählt.</string>
    <string name="check_invalid_code">Ungültige Abholdaten gelesen.</string>
    <string name="check_invalid_schedules">Keine Tonnen ausgewählt.</string>
    <string name="check_invalid_street">Keine Straße ausgewählt.</string>
    <string-array name="can_names_upper">
        <item>Graue Tonne</item>
        <item>Blaue Tonne</item>
        <item>Grüne Tonne</item>
        <item>Gelbe Tonne</item>
    </string-array>
    <string name="notification_text_line">Morgen Abholung.</string>
    <string name="pref_header_infos">Über die App</string>
    <string name="pref_title_author">Autor</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_website">Webseite</string>
    <string name="pref_url_website_short">beusterse.de</string>
    <string name="pref_url_website_long">https://beusterse.de</string>
    <string name="pref_title_note">Hinweis</string>
    <string name="pref_description_note">Der Eigenbetrieb Abfallwirtschaft kann weitere Abfuhrtermine festlegen, die unter Umständen nicht in der App enthalten sind. Diese sind dann online oder im Gebührenbescheid zu finden.</string>
    <string name="pref_description_note_reminders">Neben den gelisteten Einstellungen können Systemeinstellungen von Android (bspw. Energiesparmodus, ungenutzte App Verwaltung) die Erinnerungen beeinträchtigen.</string>
    <string name="pref_theme_title">Design</string>
    <string-array name="pref_theme_entries">
        <item>Hell</item>
        <item>Dunkel</item>
        <item>Systemeinstellung</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>1</item>
        <item>2</item>
        <item>-1</item>
    </string-array>
    <string name="pref_theme_default">-1</string>
    <string name="pref_rate_title">App bewerten</string>
    <string name="pref_rate_description">Ist die App hilfreich? Dann klick hier um sie kurz zu bewerten.</string>
    <string name="pref_privacy_policy_title">Datenschutzerklärung</string>
    <string name="pref_header_notifications">Erinnerungen</string>
    <string name="pref_header_pickup">Ort und Abfuhr</string>
    <string name="pref_header_sync">Aktualisierungen</string>
</resources>