<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_key_info_theme"
        android:title="@string/pref_theme_title"
        android:dialogTitle="@string/pref_theme_title"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:defaultValue="@string/pref_theme_default"
        app:iconSpaceReserved="false" />
    <Preference
        app:title="@string/pref_title_version"
        app:summary="@string/version"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="@string/pref_key_info_rate"
        app:title="@string/pref_rate_title"
        app:summary="@string/pref_rate_description"
        app:iconSpaceReserved="false" />
    <Preference
        app:title="@string/pref_title_author"
        app:summary="@string/author"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="@string/pref_key_info_website"
        app:title="@string/pref_title_website"
        app:summary="@string/pref_url_website_short"
        app:iconSpaceReserved="false" >
        <intent
            android:action="app.intent.action.VIEW"
            android:data="@string/pref_url_website_long" />
    </Preference>
    <Preference
        app:title="@string/pref_privacy_policy_title"
        app:key="@string/pref_key_info_privacy"
        app:iconSpaceReserved="false" >
    </Preference>
    <Preference
        app:title="@string/pref_title_note"
        app:summary="@string/pref_description_note"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
