<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="de.beusterse.abfalllro.fragments.preferences.PickupPreferenceFragment"
        app:icon="@drawable/ic_local_shipping_black_24dp"
        app:title="@string/pref_header_pickup" />

    <Preference
        app:fragment="de.beusterse.abfalllro.fragments.preferences.NotificationPreferenceFragment"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:title="@string/pref_header_notifications" />

    <Preference
        app:fragment="de.beusterse.abfalllro.fragments.preferences.SyncPreferenceFragment"
        app:icon="@drawable/ic_sync_black_24dp"
        app:title="@string/pref_header_sync" />

    <Preference
        app:fragment="de.beusterse.abfalllro.fragments.preferences.InfoPreferenceFragment"
        app:icon="@drawable/ic_info_black_24dp"
        app:title="@string/pref_header_infos" />

    <Preference
        app:fragment="de.beusterse.abfalllro.fragments.preferences.DevPreferenceFragment"
        app:icon="@drawable/ic_developer_mode_black_24dp"
        app:title="@string/pref_header_dev" />

</PreferenceScreen>

