<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/pickupLocationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_setup_location_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/setupPrimary" />

        <TextView
            android:id="@+id/pickupLocationDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_setup_location_desc"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/intro_setup_location_label_town"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/locationDropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/locationStreetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/intro_setup_location_label_street"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/locationStreetDropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

    </LinearLayout>

</ScrollView>